# reference_api_v2

./: .gitignore  .gitmodules  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
etc/: config.toml
reference_api/: __init__.py  cli.py  main.py
reference_api/api/: collections.py  items.py
reference_api/availability/: blazar_client.py  cache.py  models.py  worker.py
reference_api/services/: clusters.py  nodes.py  site_root.py  sites.py  utils.py
reference_api/storage/: filesystem.py  git_versioning.py
tests/: conftest.py  test_app.py  test_availability.py  test_storage_filesystem.py  test_version_format.py  test_versioning.py
tests/data/chameleoncloud/: chameleoncloud.json
tests/data/chameleoncloud/sites/uc/: uc.json
tests/data/chameleoncloud/sites/uc/clusters/chameleon/: chameleon.json
tests/data/chameleoncloud/sites/uc/clusters/chameleon/nodes/: 03129bbe-330c-4591-bc17-96d7e15d3e74.json  a1b2c3d4-e5f6-7890-abcd-ef1234567890.json
ui/: app.js  availability-timeline.js  index.html  styles.css
